# BLAPP

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  README.md
cmake/: FindHypre.cmake  FindLAPACKE.cmake  FindMmgs.cmake  FindPETSc.cmake  FindScotch.cmake
tests/: lapack_example.c  lis_example.c  metis_example.c  mumps_example.c  output.mesh
